--- a/_config.yml
+++ b/_config.yml
@@ -1,34 +1,28 @@
 # site settings
-title: Forty
-subtitle: by HTML5 UP
-email: youremailaddress@gmail.com
-description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
+# title: David Gibson
+# subtitle: by HTML5 UP
+email: david.stanford.gibson@gmail.com
+description: Web Developer - interested in architecture,<br> functional programming and critical rendering path optimization.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 author:
-street_address: 1234 Somewhere Road
-city: Nashville
-state: TN
-zip_code: 55555
-country: United States of America
-phone: (716) 555-5555
+# street_address: 1234 Somewhere Road
+# city: Nashville
+# state: TN
+# zip_code: 55555
+# country: United States of America
+# phone: (716) 555-5555
 
 # homepage tiles
 tiles-source: posts # accepts "posts" or "pages"
 tiles-count: 6
 
 # social settings
-500px_url:
-facebook_url:
-github_url:
-gitlab_url: https://gitlab.com/u/andrewbanchich
-googleplus_url: https://plus.google.com/u/0/+AndrewBanchich
-instagram_url: https://instagram.com
-linkedin_url: https://www.linkedin.com/in/andrew-banchich-a4ba1195
-pinterest_url:
-slack_url:
-twitter_url: https://twitter.com/andrewbanchich
-
+# 500px_url:
+# facebook_url:
+github_url: https://github.com/d-s-g
+codepen_url: https://codepen.io/davidcolab/
+linkedin_url: https://www.linkedin.com/in/david-gibson-299b04b6/
 # build settings
 markdown: kramdown
 
